# vibe-coding-experiment

./: README.md
.github/workflows/: backend-ci.yml  frontend-ci.yml  simulation-ci.yml
docs/: 3-amigos-process.md  functional_requirements_mvp.md  go_code_review_guidelines.md  go_coding_guidelines.md  high_level_architecture.md  product_manager_questions.md  python_code_review_guidelines.md  python_coding_guidelines.md  secure_cors_implementation.md  ui_requirements.md
docs/design-system/: spec.md
docs/review/: 7d70acd_review.md  high_level_architecture_review.md  (+1 more)
project-management/: FEAT-0001-EPIC-guest-user-circuit-creation.md
prompts/: 0001-agent-initial-project-readme.md  0002-agent-product-manager-questions.md  0003-agent-MVP-functional-requirements.md  0004-agent-architect-task.md  0005-agent-architect-task-decomposition.md  0006-high-level-architecture.md  0007-puml-integration.md  0008-use-cases.md  0009-question-review.md  0010-address-review-comments.md  0011-monorepo-setup-task.md  0012-monorepo-frontend.md  0014-dummy test.md  0015-agent-go-setup.md  0016 - guidelines  0016 - guidelines.md  0017-review.md
quantum-circuit-editor/: .gitignore  docker-compose.yml
quantum-circuit-editor/simulation/: .pre-commit-config.yaml  Dockerfile.dev  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup_precommit.sh
quantum-circuit-editor/simulation/src/quantum_simulator/: __init__.py  config.py  main.py
quantum-circuit-editor/simulation/tests/: __init__.py  conftest.py  test_basic.py
ui-design/: index.html  styles.css
(+48 files in other folders)
